--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -153,7 +153,7 @@
     [id]="filterId"
     [entries]="displayEntries()"
     [labelProp]="'name_full'"
-    [groupProp]="'author_details.name'"
+    [groupConfig]="{ mode: 'PROPERTY', groupProp: 'author_details.name' }"
     [heading]="overviewTypeName()"
     [forceSingleLine]="true"
   ></app-filter-list>
