--- a/src/app/design/organisms/filter-list/filter-list.component.html
+++ b/src/app/design/organisms/filter-list/filter-list.component.html
@@ -145,13 +145,10 @@
 </ng-template>
 
 <ng-template #treeList>
-  <div class="container">
-    <ul class="row">
-      @for (node of treeData(); track node.root.id) {
-        <app-tree class="col-sm-6 mb-5" role="listitem" [data]="node" />
-      }
-    </ul>
-  </div>
+  @let data = treeData();
+  @if (data) {
+    <app-tree class="col-sm-6 mb-5" role="listitem" [data]="data" />
+  }
 </ng-template>
 
 <ng-template #searchList>
