--- a/src/app/design/organisms/tree/tree.component.scss
+++ b/src/app/design/organisms/tree/tree.component.scss
@@ -1,19 +1,30 @@
 :host {
-  display: flex;
-  width: 100%;
 }
 
 .tree {
+  &:focus-visible {
+    border-radius: var(--bs-border-radius);
+    outline: var(--focus-outline);
+  }
+
   &__node {
     display: flex;
     flex-direction: column;
     padding: var(--spacer-1) var(--spacer-0) var(--spacer-1) var(--spacer-3);
-    border-left: 1px solid var(--bs-white);
-  }
+    width: 100%;
 
-  &__node--root {
-    padding-left: var(--spacer-0);
-    border: unset;
+    &:focus-visible {
+      border-radius: var(--bs-border-radius);
+      outline: var(--focus-outline);
+    }
+
+    &--root {
+      padding-left: var(--spacer-0);
+
+      &:focus-visible {
+        outline-offset: 8px;
+      }
+    }
   }
 }
 
@@ -26,6 +37,26 @@
       font-weight: bold;
       font-size: x-large !important;
       text-decoration: underline;
+    }
+  }
+
+  &__children {
+    border-left: 1px solid var(--bs-white);
+  }
+
+  &__toggle {
+    transform: translateX(-50%);
+    width: calc(var(--spacer-4));
+    height: calc(var(--spacer-4));
+    border-radius: var(--bs-border-radius);
+
+    &:hover,
+    &:focus-visible {
+      background-color: var(--bs-secondary);
+    }
+
+    &--disabled {
+      opacity: 0;
     }
   }
 }
