Add mechanism to configure initial expand state

--- a/src/app/design/organisms/filter-list/filter-list.component.html
+++ b/src/app/design/organisms/filter-list/filter-list.component.html
@@ -150,6 +150,7 @@
       <app-tree
         class="tree-list__item col-sm-6 px-5"
         role="listitem"
+        [expandOnInit]="true"
         [data]="rootNode"
       />
     }
