--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -98,11 +98,8 @@
 
 <ng-template #defaultHeading>
   <!-- Image -->
-  <img
-    class="overview__image"
-    [src]="OVERVIEW_IMAGE_MAP[overviewType()]"
-    alt="Image describing the overview type {{ overviewType() }}"
-  />
+  @let imageData = $any(OVERVIEW_IMAGE_MAP)[overviewType()];
+  <img class="overview__image" [src]="imageData?.url" [alt]="imageData?.alt" />
 </ng-template>
 
 <ng-template #characterHeading>
