Reduce heavy font-weight

--- a/src/app/design/molecules/image-card/image-card.component.scss
+++ b/src/app/design/molecules/image-card/image-card.component.scss
@@ -64,7 +64,7 @@
 
   &__title-link {
     text-align: center;
-    font-weight: bold;
+    font-weight: normal;
     width: 100%;
     display: block;
     @include media-breakpoint-up(md) {
