--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -119,7 +119,7 @@
                 [fallbackUrl]="'/' + defaultPlayerCharacterImage"
                 [imageUrls]="playerCharacter.images"
                 [link]="playerCharacter.getAbsoluteRouterUrl()"
-                [alt]="'Player character' + playerCharacter.name"
+                [alt]="''"
                 [text]="playerCharacter.name_full"
               ></app-image-card>
             }
