--- a/src/app/design/organisms/filter-list/filter-list.component.html
+++ b/src/app/design/organisms/filter-list/filter-list.component.html
@@ -145,10 +145,10 @@
 </ng-template>
 
 <ng-template #treeList>
-  <ul class="tree-list row">
+  <ul class="tree-list">
     @for (rootNode of treeData(); track rootNode) {
       <app-tree
-        class="tree-list__item col-sm-6 px-5"
+        class="tree-list__item"
         role="listitem"
         [expandOnInit]="true"
         [data]="rootNode"
