--- a/src/app/design/molecules/breadcrumb-list/breadcrumb-list.component.html
+++ b/src/app/design/molecules/breadcrumb-list/breadcrumb-list.component.html
@@ -1,12 +1,16 @@
 <nav class="navigation" [attr.aria-label]="'breadcrumb'">
   <ol class="breadcrumb">
-    @for (entry of linkEntries(); track entry; let last = $last) {
+    @for (entry of linkEntries(); track entry) {
       <li
         class="breadcrumb-item"
-        [class.active]="last"
-        [attr.aria-current]="last ? 'page' : null"
+        [class.active]="$last"
+        [attr.aria-current]="$last ? 'page' : null"
       >
-        <a [routerLink]="entry.url" class="breadcrumb-item__link">
+        <a
+          [routerLink]="entry.url"
+          class="breadcrumb-item__link"
+          [class.breadcrumb-item__link--last]="$last"
+        >
           {{ entry.label }}
         </a>
       </li>
