Fix button size

--- a/src/app/design/molecules/list/list.component.html
+++ b/src/app/design/molecules/list/list.component.html
@@ -10,6 +10,7 @@
           class="ms-3"
           [attr.aria-label]="'Create ' + heading()"
           [kind]="'PRIMARY'"
+          [size]="'SMALL'"
           [icon]="'plus'"
           (clicked)="createButtonClick.emit()"
         ></button>
@@ -20,6 +21,7 @@
           class="ms-3"
           [attr.aria-label]="'Create ' + heading()"
           [kind]="'PRIMARY'"
+          [size]="'SMALL'"
           [icon]="'plus'"
           [routerLink]="option.url"
           [queryParams]="option.queryParams"
