--- a/src/app/design/organisms/filter-list/filter-list.component.scss
+++ b/src/app/design/organisms/filter-list/filter-list.component.scss
@@ -1,4 +1,5 @@
 @use "src/utils" as utils;
+@import "/src/screens.scss";
 
 @include utils.reset-list-styles();
 
@@ -13,6 +14,13 @@
     padding: 0;
     gap: var(--spacer-2);
     margin-bottom: var(--spacer-4);
+    padding-left: var(--spacer-0);
+    padding-right: var(--spacer-0);
+
+    @include media-breakpoint-up(md) {
+      padding-left: calc(var(--bs-gutter-x) * 0.5);
+      padding-right: calc(var(--bs-gutter-x) * 0.5);
+    }
 
     &:focus-within,
     &--active {
@@ -64,7 +72,11 @@
   &__item {
     border-bottom: var(--bs-border-width) var(--bs-border-style)
       var(--bs-border-color);
-    padding: var(--spacer-3) var(--spacer-4);
+    padding: var(--spacer-3) var(--spacer-0);
+
+    @include media-breakpoint-up(md) {
+      padding: var(--spacer-3) var(--spacer-4);
+    }
   }
 }
 
