--- a/src/app/design/organisms/tree/tree.component.scss
+++ b/src/app/design/organisms/tree/tree.component.scss
@@ -13,7 +13,7 @@
   &__node {
     display: flex;
     flex-direction: column;
-    padding: var(--spacer-1) var(--spacer-0) var(--spacer-1) var(--spacer-3);
+    padding: var(--spacer-0) var(--spacer-0) var(--spacer-0) var(--spacer-0);
     width: 100%;
 
     &:focus-visible {
@@ -48,6 +48,34 @@
     }
   }
 
+  &__children {
+    border-left: 1px solid var(--bs-white);
+    margin-left: calc(1.5 * var(--spacer-2));
+  }
+}
+
+.content-container {
+  display: flex;
+  justify-content: space-between;
+
+  &__left {
+    display: flex;
+    align-items: center;
+  }
+
+  &__toggle {
+    border-radius: var(--bs-border-radius);
+
+    &:hover,
+    &:focus-visible {
+      color: var(--bs-link-hover-color);
+    }
+
+    &--disabled {
+      opacity: 0;
+    }
+  }
+
   &__content {
     width: fit-content;
     font-size: medium;
@@ -61,30 +89,10 @@
     }
   }
 
-  &__children {
-    border-left: 1px solid var(--bs-white);
-    margin-left: calc(1.5 * var(--spacer-2));
-  }
-
-  &__toggle {
-    width: calc(var(--spacer-4));
-    height: calc(var(--spacer-4));
-    border-radius: var(--bs-border-radius);
-
-    @include media-breakpoint-up(md) {
-      width: calc(var(--spacer-3));
-      height: calc(var(--spacer-3));
-      min-width: unset;
-      min-height: unset;
-    }
-
-    &:hover,
-    &:focus-visible {
-      color: var(--bs-link-hover-color);
-    }
-
-    &--disabled {
-      opacity: 0;
-    }
+  &__right {
+    width: calc(var(--spacer-4) * 2.5);
+    font-style: italic;
+    font-size: smaller;
+    text-align: start;
   }
 }
