Migrate title to tooltip of bootstrap

--- a/src/app/design/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/design/molecules/edit-toggle/edit-toggle.component.html
@@ -8,6 +8,6 @@
   [hotkey]="'e'"
   [disabledHotkey]="disabledHotkey()"
   [attr.aria-label]="title()"
-  [title]="title()"
+  [ngbTooltip]="title()"
   (hotkeyPressed)="onClick()"
 ></button>
