--- a/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
+++ b/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
@@ -5,7 +5,7 @@
       class="form-control__selected-value-badge"
       [kind]="'DARK'"
       [text]="selectedItemLabel"
-      [title]="'Clear this option'"
+      [ngbTooltip]="'Clear this option'"
       [icon]="'times'"
       [interactionMode]="'BUTTON'"
       [maxLength]="20"
