--- a/src/app/design/organisms/location-accordion/location-accordion.component.html
+++ b/src/app/design/organisms/location-accordion/location-accordion.component.html
@@ -3,7 +3,7 @@
   @if (canCreate()) {
     <a
       btn
-      title="Create Location"
+      [ngbTooltip]="'Create Location'"
       aria-label="Create Location"
       [kind]="'PRIMARY'"
       [size]="'SMALL'"
