--- a/src/app/design/templates/sessionaudio/sessionaudio.component.html
+++ b/src/app/design/templates/sessionaudio/sessionaudio.component.html
@@ -7,7 +7,7 @@
           [icon]="'pencil'"
           [kind]="'SECONDARY'"
           [routerLink]="updateUrl()"
-          [title]="'Edit Recording'"
+          [ngbTooltip]="'Edit Recording'"
           [attr.aria-label]="'Edit Recording'"
           [hotkey]="'e'"
           (hotkeyPressed)="$event.host.click()"
