--- a/src/app/design/organisms/image-carousel-card/image-carousel-card.component.html
+++ b/src/app/design/organisms/image-carousel-card/image-carousel-card.component.html
@@ -40,7 +40,7 @@
 
     <div class="form-card__image-container">
       <img
-        title="None"
+        [ngbTooltip]="'None'"
         class="form-card__image"
         [src]="serverUrl() + currentImage().image"
         alt=""
@@ -93,7 +93,7 @@
 
     <div class="form-card__image-container">
       <img
-        title="None"
+        [ngbTooltip]="'None'"
         class="form-card__image"
         [src]="serverUrl() + currentImage().image"
         alt="image to delete"
