--- a/src/app/design/organisms/image-carousel/image-carousel.component.html
+++ b/src/app/design/organisms/image-carousel/image-carousel.component.html
@@ -10,7 +10,7 @@
   >
     @for (image of images(); track image.pk) {
       <ng-template ngbSlide [id]="'imageIndex-' + $index">
-        <div class="image-container" [title]="image.name">
+        <div class="image-container" [ngbTooltip]="image.name">
           <img [src]="serverUrl() + image.image" [alt]="'Image ' + $index" />
         </div>
       </ng-template>
@@ -26,7 +26,7 @@
   @if (canCreate()) {
     <button
       btn
-      title="Create Image"
+      [ngbTooltip]="'Create Image'"
       class="mx-2"
       aria-label="'Create Image'"
       [kind]="'PRIMARY'"
@@ -40,7 +40,7 @@
     <button
       btn
       aria-label="'Update Image'"
-      title="Update Image"
+      [ngbTooltip]="'Update Image'"
       class="mx-2"
       [kind]="'SECONDARY'"
       [icon]="'pencil'"
@@ -53,7 +53,7 @@
     <button
       btn
       aria-label="'Delete Image'"
-      title="Delete Image"
+      [ngbTooltip]="'Delete Image'"
       class="mx-2"
       [kind]="'DANGER'"
       [icon]="'trash'"
