--- a/src/app/design/organisms/quote/quote.component.html
+++ b/src/app/design/organisms/quote/quote.component.html
@@ -64,7 +64,7 @@
               btn
               class="field__control"
               [attr.aria-label]="control.title"
-              [title]="control.title"
+              [ngbTooltip]="control.title"
               [kind]="control.type"
               [text]="control.label"
               [icon]="control.icon"
