--- a/src/app/design/organisms/sidebar/sidebar.component.html
+++ b/src/app/design/organisms/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 @if (campaign()) {
   <div class="offcanvas-header">
     <div class="sidebar__brand brand">
-      <div class="brand__back" title="campaign-overview">
+      <div class="brand__back" [ngbTooltip]="'campaign-overview'">
         <a
           [routerLink]="campaignOverviewUrl"
           class="brand__back-link"
@@ -15,7 +15,7 @@
 
       <div
         class="brand__home"
-        [title]="campaign()?.name + '-Home'"
+        [ngbTooltip]="campaign()?.name + '-Home'"
         [class.disabled-entry]="campaign() == null"
       >
         <a class="brand__home-link" [routerLink]="homeUrl()">
