--- a/src/app/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.html
@@ -28,7 +28,7 @@
           <h3 class="text-center">Background</h3>
           <img
             class="settings__image"
-            title="Campaign background image"
+            [ngbTooltip]="'Campaign background image'"
             alt="Background image of this campaign"
             [src]="serverUrl + campaign.background_image"
           />
@@ -38,7 +38,7 @@
           <h3 class="text-center">Icon</h3>
           <img
             class="settings__icon"
-            title="Campaign Icon"
+            [ngbTooltip]="'Campaign Icon'"
             alt="Icon of this campaign"
             [src]="serverUrl + '/' + campaign.icon"
           />
