--- a/src/app/design/templates/character/character.component.html
+++ b/src/app/design/templates/character/character.component.html
@@ -4,7 +4,7 @@
       <div class="character__edit-container">
         <a
           btn
-          [title]="'Edit ' + character().name"
+          [ngbTooltip]="'Edit ' + character().name"
           [attr.aria-label]="'Edit ' + character().name"
           [icon]="'pencil'"
           [kind]="'SECONDARY'"
