--- a/src/app/design/templates/quest/quest.component.html
+++ b/src/app/design/templates/quest/quest.component.html
@@ -7,7 +7,7 @@
           [icon]="'pencil'"
           [kind]="'SECONDARY'"
           [routerLink]="updateUrl()"
-          [title]="'Edit ' + quest().name"
+          [ngbTooltip]="'Edit ' + quest().name"
           [attr.aria-label]="'Edit ' + quest().name"
           [hotkey]="'e'"
           (hotkeyPressed)="$event.host.click()"
