--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
@@ -30,6 +30,7 @@
   }
 
   &__encounter {
+    scroll-margin-top: var(--spacer-4);
     padding: unset;
     border-radius: var(--bs-border-radius);
     width: 100%;
