Remove pointless article element

--- a/src/app/design/organisms/page-container/page-container.component.html
+++ b/src/app/design/organisms/page-container/page-container.component.html
@@ -1,5 +1,5 @@
 <div class="page" [@fadeIn]>
-  <article class="page__foreground">
+  <div class="page__foreground">
     <ng-content></ng-content>
-  </article>
+  </div>
 </div>
