--- a/src/app/design/molecules/editor/editor.component.html
+++ b/src/app/design/molecules/editor/editor.component.html
@@ -51,7 +51,7 @@
     <div class="flex-column card p-4">
       <!-- Comparison text -->
       <div>
-        <h3>Server Version</h3>
+        <h3>Description From Server</h3>
         <app-html-text [text]="serverModel()!" />
       </div>
 
@@ -59,12 +59,13 @@
 
       <!-- Actual edit form -->
       <form (submit)="finishEdit()">
-        <h3>Your Version</h3>
+        @let outdatedId = id() + "-outdated";
+        <label [for]="outdatedId" class="h3"> Description from You </label>
 
         <editor
           [init]="_settings()"
-          [name]="id()"
-          [id]="id()"
+          [name]="outdatedId"
+          [id]="outdatedId"
           [(ngModel)]="textModel"
           class="mb-2"
         ></editor>
