--- a/src/app/design/molecules/small-create-form/small-create-form.component.html
+++ b/src/app/design/molecules/small-create-form/small-create-form.component.html
@@ -24,7 +24,7 @@
 </ng-template>
 
 <ng-template #createState>
-  <form class="form">
+  <form class="form" (keydown.Escape)="onCancel()">
     <label [for]="id" class="cdk-visually-hidden">
       {{ formFieldLabel() }}
     </label>
