--- a/src/app/design/molecules/formly-file-field/formly-file-field.component.scss
+++ b/src/app/design/molecules/formly-file-field/formly-file-field.component.scss
@@ -1,10 +1,38 @@
-
-.disabled{
+.disabled {
   text-decoration: line-through;
   cursor: not-allowed;
 }
 
-.file-field{
-  width: fit-content;
-  display: inline-block;
+.field-container {
+  margin-bottom: var(--spacer-3);
+
+  &__field {
+  }
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+
+  &__filepicker {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: var(--spacer-5) var(--spacer-5);
+    border: dashed 2px var(--bs-white);
+    border-radius: var(--bs-border-radius);
+    cursor: pointer;
+  }
+
+  &__description {
+    position: relative;
+    font-size: 14px;
+    text-align: center;
+    width: 100%;
+    top: -48px;
+    pointer-events: none;
+  }
 }
