Add footer to overview

--- a/src/app/design/molecules/article-footer/article-footer.component.scss
+++ b/src/app/design/molecules/article-footer/article-footer.component.scss
@@ -1,8 +1,12 @@
-app-confirmation-toggle-button{
+:host {
+  display: block;
+}
+
+app-confirmation-toggle-button {
   --align: end;
 }
 
-.footer{
+.footer {
   display: flex;
   justify-content: space-between;
 }
