--- a/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
+++ b/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
@@ -17,7 +17,7 @@
   <input
     #inputElement
     #instance="ngbTypeahead"
-    id="typeahead-focus"
+    [id]="field.id ?? ''"
     type="text"
     class="form-control__input"
     [ngbTypeahead]="search"
