--- a/src/app/design/molecules/formly-autocomplete-field/formly-autocomplete-field.component.html
+++ b/src/app/design/molecules/formly-autocomplete-field/formly-autocomplete-field.component.html
@@ -28,7 +28,7 @@
       (blur)="formControl.markAsTouched()"
       [value]="inputValue"
       [disabled]="props.disabled"
-      [id]="inputId"
+      [id]="field.id ?? ''"
       [attr.list]="'options-' + randomId"
       [formlyAttributes]="field"
       [placeholder]="'Enter a search query'"
