Add id handling

--- a/src/app/design/organisms/formly-editor-field/formly-editor-field.component.html
+++ b/src/app/design/organisms/formly-editor-field/formly-editor-field.component.html
@@ -8,6 +8,7 @@
   </label>
 
   <editor
+    [id]="field.id ?? ''"
     [attr.name]="to['name']"
     #textEditorElement
     [formControl]="formControl"
